add monkey for login_required

--- a/testbox/templates/auth/login.html
+++ b/testbox/templates/auth/login.html
@@ -58,7 +58,7 @@
             </form>
         </div>
     </div>
-    <div class="row">
+    <div class="row hidden-xs">
         <div class="col-md-8 col-md-offset-2 note">
             <div class="alert alert-warning text-left">
                 <strong>Note: </strong>
