fix icon width issue

--- a/testbox/templates/auth/login.html
+++ b/testbox/templates/auth/login.html
@@ -34,13 +34,13 @@
             <form id="form-signin" method="POST" action="{{ url_for('auth.login') }}">
                 <div class="form-group">
                     <div class="input-group input-group-lg">
-                        <span class="input-group-addon"><i class="fa fa-user"></i></span>
+                        <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
                         <input type="text" class="form-control" placeholder="Core ID" required autofocus>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="input-group input-group-lg">
-                        <span class="input-group-addon"><i class="fa fa-key"></i></span>
+                        <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
                         <input type="password" class="form-control" placeholder="Password" required>
                     </div>
                 </div>
