--- a/testbox/templates/auth/login.html
+++ b/testbox/templates/auth/login.html
@@ -15,7 +15,7 @@
         <div class="col-md-10 col-md-offset-1">
             <div class="alert alert-danger alert-dismissable">
                 <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                We have detected that you are using old version IE browser, in order to have a better surfing experience,<br>
+                We have detected that you are using old version IE browser(less than IE10), in order to have a better surfing experience,<br>
                 please
                 <a href="http://windows.microsoft.com/en-us/internet-explorer/ie-10-worldwide-languages" class="alert-link" target="_blank">upgrade</a>
                 your browser, or use
