--- a/testbox/templates/base.html
+++ b/testbox/templates/base.html
@@ -16,7 +16,7 @@
     <script>
         // Detecting IE
         var oldIE = false;
-        if ($("html").is(".ie6, .ie7, .ie8")) {
+        if ($("html").is(".ie6, .ie7, .ie8 .ie9")) {
             oldIE = true;
         }
     </script>
