--- a/testbox/templates/base.html
+++ b/testbox/templates/base.html
@@ -33,6 +33,7 @@
 {% endblock -%}
 {%- block body_main %}
 {% endblock -%}
+{% include "footer.html" -%}
 <script src="{{ static('components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
 <script src="{{ static('components/holderjs/holder.js') }}"></script>
 <script src="{{ static('js/base.js') }}"></script>
