--- a/testbox/static/css/base.css
+++ b/testbox/static/css/base.css
@@ -1,29 +1,3 @@
-.container {
-    width: auto;
-}
-
-.navbar-inverse {
-    background-color: #438EB9;
-    border: 0;
-}
-.navbar-inverse
-.navbar-brand {
-    color: #FFFFFF;
-}
-.navbar-nav > li.grey > a {
-    background-color: #555555;
-}
-.navbar-nav > li > a {
-    color: #FFFFFF;
-    display: block;
-    height: 100%;
-    line-height: inherit;
-    min-width: 50px;
-    position: relative;
-    text-align: center;
-    width: auto;
-}
-
 ::-webkit-input-placeholder { /* WebKit browsers */
     color:    #d3d3d3;
 }
@@ -36,3 +10,27 @@
 :-ms-input-placeholder { /* Internet Explorer 10+ */
     color:    #d3d3d3;
 }
+.container {
+    width: auto;
+}
+.navbar {
+    background: none repeat scroll 0 0 #438EB9;
+    border: 0 none;
+    border-radius: 0;
+    box-shadow: none;
+    margin: 0;
+    min-height: 45px;
+    padding-left: 0;
+    padding-right: 0;
+    position: relative;
+}
+.navbar .project_name {
+    color: #FFFFFF;
+    font-size: 22px;
+    text-shadow: none;
+
+}
+.navbar-nav > li > a {
+    padding: 0;
+}
+
