--- a/testbox/templates/header.html
+++ b/testbox/templates/header.html
@@ -1,29 +1,23 @@
-<nav class="navbar navbar-inverse">
+<div class="navbar navbar-default">
     <div class="container">
-        <a href="{{ url_for('main.index') }}" class="navbar-brand">
-            <i class="fa fa-leaf fa-inverse"></i> My Test Box <i class="fa fa-leaf fa-inverse"></i>
-        </a>
-        <div class="collapse navbar-collapse pull-right">
+        <div class="navbar-header pull-left">
+            <a href="{{ url_for('main.index') }}" class="project_name hidden-xs">
+                <i class="fa fa-leaf fa-inverse"></i> Test Box
+            </a>
+        </div>
+        <div class="navbar-collapse collapse pull-right">
             <ul class="nav navbar-nav">
-                <li class="dropdown grey">
-                    <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="fa fa-tasks fa-inverse"></i>
-                        <span class="badge">4</span>
+                <li id="nav_user" class="dropdown">
+                    <a class="dropdown-toggle" href="#" data-toggle="dropdown">
+                        <img alt="Jason's Photo" src="{{ static('img/user.jpg') }}">
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
+                        <li>
+                            <a target="_blank" href="http://v3.bootcss.com/getting-started/">起步</a>
+                        </li>
                     </ul>
-                </li>
-                <li>
-                    <img src="holder.js/150x50">
                 </li>
             </ul>
         </div>
     </div>
-</nav>
+</div>
