--- a/testbox/static/css/base.css
+++ b/testbox/static/css/base.css
@@ -1,3 +1,4 @@
+/* patches */
 ::-webkit-input-placeholder { /* WebKit browsers */
     color:    #d3d3d3;
 }
@@ -10,27 +11,368 @@
 :-ms-input-placeholder { /* Internet Explorer 10+ */
     color:    #d3d3d3;
 }
+/* global */
+
+/* bootstrap spinner */
+header {
+    padding-right: 20px;
+}
 .container {
     width: auto;
 }
-.navbar {
-    background: none repeat scroll 0 0 #438EB9;
-    border: 0 none;
-    border-radius: 0;
-    box-shadow: none;
-    margin: 0;
-    min-height: 45px;
-    padding-left: 0;
-    padding-right: 0;
-    position: relative;
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+    background-color: #FEE188;
 }
-.navbar .project_name {
-    color: #FFFFFF;
-    font-size: 22px;
-    text-shadow: none;
+.dropdown-menu.pull-right.dropdown-caret:after {
+    left: auto;
+    right: 10px;
+}
+.dropdown-menu.dropdown-caret:after {
+    border-bottom: 6px solid #FFFFFF;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    content: "";
+    display: inline-block;
+    left: 10px;
+    position: absolute;
+    top: -6px;
+}
 
-}
-.navbar-nav > li > a {
+/* bootstrap-dropdown narbar */
+.dropdown-navbar {
     padding: 0;
+    width: 240px;
+    -webkit-box-shadow: 0 2px 4px rgba(30, 30, 100, 0.25);
+    box-shadow: 0 2px 4px rgba(30, 30, 100, 0.25);
+    border-color: #bcd4e5
+}
+.dropdown-navbar > li {
+    padding: 0 8px;
+    background-color: #fff
+}
+.dropdown-navbar > li.dropdown-header {
+    text-shadow: none;
+    padding-top: 0;
+    padding-bottom: 0;
+    line-height: 34px;
+    font-size: 13px;
+    font-weight: bold;
+    text-transform: none;
+    border-bottom: 1px solid
+}
+.dropdown-navbar > li > [class*="icon-"], .dropdown-navbar > li > a > [class*="icon-"] {
+    margin-right: 5px !important;
+    color: #555;
+    font-size: 14px
+}
+.dropdown-navbar > li > a {
+    padding: 10px 2px;
+    margin: 0;
+    border-bottom: 1px solid;
+    font-size: 12px;
+    line-height: 16px;
+    color: #555
+}
+.dropdown-navbar > li > a:active, .dropdown-navbar > li > a:hover, .dropdown-navbar > li > a:focus {
+    background-color: transparent !important;
+    color: #555
+}
+.dropdown-navbar > li > a .progress {
+    margin-bottom: 0;
+    margin-top: 4px
+}
+.dropdown-navbar > li > a .badge {
+    line-height: 16px;
+    padding-right: 4px;
+    padding-left: 4px;
+    font-size: 12px
+}
+.dropdown-navbar > li:last-child > a {
+    border-bottom: 0 solid #DDD;
+    border-top: 1px dotted transparent;
+    color: #4f99c6;
+    text-align: center;
+    font-size: 13px
+}
+.dropdown-navbar > li:last-child > a:hover {
+    background-color: #FFF;
+    color: #4f99c6;
+    text-decoration: underline
+}
+.dropdown-navbar > li:last-child > a:hover > [class*="icon-"] {
+    text-decoration: none
+}
+.dropdown-navbar > li:hover {
+    background-color: #f4f9fc !important
+}
+.dropdown-navbar > li.dropdown-header {
+    background-color: #ecf2f7 !important;
+    color: #8090a0;
+    border-bottom-color: #bcd4e5
+}
+.dropdown-navbar > li.dropdown-header > [class*="icon-"] {
+    color: #8090a0
+}
+.dropdown-navbar > li > a {
+    border-bottom-color: #e4ecf3
+}
+.dropdown-navbar.navbar-pink {
+    border-color: #e5bcd4
+}
+.dropdown-navbar.navbar-pink > li:hover {
+    background-color: #fcf4f9 !important
+}
+.dropdown-navbar.navbar-pink > li.dropdown-header {
+    background-color: #f7ecf2 !important;
+    color: #b471a0;
+    border-bottom-color: #e5bcd4
+}
+.dropdown-navbar.navbar-pink > li.dropdown-header > [class*="icon-"] {
+    color: #c06090
+}
+.dropdown-navbar.navbar-pink > li > a {
+    border-bottom-color: #f3e4ec
+}
+.dropdown-navbar.navbar-grey {
+    border-color: #e5e5e5
+}
+.dropdown-navbar.navbar-grey > li:hover {
+    background-color: #f8f8f8 !important
+}
+.dropdown-navbar.navbar-grey > li.dropdown-header {
+    background-color: #f2f2f2 !important;
+    color: #3a87ad;
+    border-bottom-color: #e5e5e5
+}
+.dropdown-navbar.navbar-grey > li.dropdown-header > [class*="icon-"] {
+    color: #3a87ad
+}
+.dropdown-navbar.navbar-grey > li > a {
+    border-bottom-color: #eee
+}
+.dropdown-navbar.navbar-green {
+    border-color: #b4d5ac
+}
+.dropdown-navbar.navbar-green > li:hover {
+    background-color: #f4f9ef !important
+}
+.dropdown-navbar.navbar-green > li.dropdown-header {
+    background-color: #ebf7e4 !important;
+    color: #8a6;
+    border-bottom-color: #b4d5ac
+}
+.dropdown-navbar.navbar-green > li.dropdown-header > [class*="icon-"] {
+    color: #90c060
+}
+.dropdown-navbar.navbar-green > li > a {
+    border-bottom-color: #ecf3e4
+}
+.dropdown-navbar [class*="btn"][class*="icon-"] {
+    display: inline-block;
+    margin: 0 5px 0 0;
+    width: 24px;
+    text-align: center;
+    padding-left: 0;
+    padding-right: 0
+}
+.dropdown-navbar .msg-photo {
+    margin-right: 6px;
+    max-width: 42px
+}
+.dropdown-navbar .msg-body {
+    display: inline-block;
+    line-height: 20px;
+    white-space: normal;
+    vertical-align: middle;
+    max-width: 175px
+}
+.dropdown-navbar .msg-title {
+    display: inline-block;
+    line-height: 14px
+}
+.dropdown-navbar .msg-time {
+    display: block;
+    font-size: 11px;
+    color: #777
+}
+.dropdown-navbar .msg-time > [class*="icon-"] {
+    font-size: 14px;
+    color: #555
 }
 
+/* bootstrap progress */
+.progress {
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    background: #dadada;
+    height: 18px
+}
+.progress .progress-bar {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    line-height: 18px
+}
+.progress[data-percent] {
+    position: relative
+}
+.progress[data-percent]:after {
+    display: inline-block;
+    content: attr(data-percent);
+    color: #FFF;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    line-height: 16px;
+    text-align: center;
+    font-size: 12px;
+    font-family: Verdana
+}
+.progress.progress-yellow[data-percent]:after {
+    color: #963
+}
+.progress.progress-small {
+    height: 12px
+}
+.progress.progress-small .progress-bar {
+    line-height: 10px;
+    font-size: 11px
+}
+.progress.progress-small[data-percent]:after {
+    line-height: 10px;
+    font-size: 11px
+}
+.progress.progress-mini {
+    height: 9px
+}
+.progress.progress-mini .progress-bar {
+    line-height: 8px;
+    font-size: 11px
+}
+.progress.progress-mini[data-percent]:after {
+    line-height: 8px;
+    font-size: 11px
+}
+.progress-bar {
+    background-color: #2a91d8
+}
+.progress-striped .progress-bar {
+    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent)
+}
+.progress-bar-danger {
+    background-color: #ca5952
+}
+.progress-striped .progress-bar-danger {
+    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent)
+}
+.progress-bar-success {
+    background-color: #59a84b
+}
+.progress-striped .progress-bar-success {
+    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent)
+}
+.progress-bar-warning {
+    background-color: #f2bb46
+}
+.progress-striped .progress-bar-warning {
+    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent)
+}
+.progress-bar-pink {
+    background-color: #d6487e
+}
+.progress-striped .progress-bar-pink {
+    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent)
+}
+.progress-bar-purple {
+    background-color: #9585bf
+}
+.progress-striped .progress-bar-purple {
+    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent)
+}
+.progress-bar-yellow {
+    background-color: #ffd259
+}
+.progress-striped .progress-bar-yellow {
+    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent)
+}
+.progress-bar-inverse {
+    background-color: #404040
+}
+.progress-striped .progress-bar-inverse {
+    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent)
+}
+.progress-bar-grey {
+    background-color: #8a8a8a
+}
+.progress-striped .progress-bar-grey {
+    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent)
+}
+.progress {
+    position: relative
+}
+.progress:before {
+    display: inline-block;
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: radial-gradient(9px 9px 0deg, circle cover, #0ff 0, rgba(0, 0, 255, 0) 100%, #00f 95%)
+}
+
+/* bootstrap sidebar nav */
+.arrow {
+    display: inline-block;
+    width: 14px !important;
+    height: 14px;
+    font-size: 18px;
+    float: right;
+}
+.nav-pills > ul {
+    border: 1px solid #dcdcdc;
+}
+.nav-pills > li {
+    border: 1px solid #dcdcdc;
+    border-bottom: 0;
+}
+.nav-pills > li:last-child {
+    border-bottom: 1px solid #dcdcdc;
+}
+.nav-pills > li[class~="active"] {
+    border-left: 0;
+    border-right: 0;
+}
+.nav-pills > li > .list-group {
+    margin-bottom: 0;
+}
