--- a/testbox/templates/header.html
+++ b/testbox/templates/header.html
@@ -1,23 +1,87 @@
-<div class="navbar navbar-default">
+<header class="navbar navbar-inverse navbar-static-top">
     <div class="container">
-        <div class="navbar-header pull-left">
-            <a href="{{ url_for('main.index') }}" class="project_name hidden-xs">
-                <i class="fa fa-leaf fa-inverse"></i> Test Box
-            </a>
+        <div class="navbar-header hidden-xs">
+            <span class="navbar-brand"><i class="fa fa-leaf"></i> My Test Box</span>
         </div>
-        <div class="navbar-collapse collapse pull-right">
-            <ul class="nav navbar-nav">
-                <li id="nav_user" class="dropdown">
-                    <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                        <img alt="Jason's Photo" src="{{ static('img/user.jpg') }}">
+        <nav class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-tasks"></i> Tasks <span class="badge">4</span> <i class="fa fa-caret-down"></i>
                     </a>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-navbar navbar-grey dropdown-menu pull-right dropdown-caret">
+                        <li class="dropdown-header">
+                            <i class="fa fa-vimeo-square"></i>
+                            4 Tasks to complete
+                        </li>
                         <li>
-                            <a target="_blank" href="http://v3.bootcss.com/getting-started/">起步</a>
+                            <a href="#">
+                                <div class="clearfix">
+                                    <span class="pull-left">Software Update</span>
+                                    <span class="pull-right">65%</span>
+                                </div>
+
+                                <div class="progress progress-mini ">
+                                    <div style="width:65%" class="progress-bar "></div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="clearfix">
+                                    <span class="pull-left">Hardware Upgrade</span>
+                                    <span class="pull-right">35%</span>
+                                </div>
+
+                                <div class="progress progress-mini ">
+                                    <div style="width:35%" class="progress-bar progress-bar-danger"></div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="clearfix">
+                                    <span class="pull-left">Unit Testing</span>
+                                    <span class="pull-right">15%</span>
+                                </div>
+
+                                <div class="progress progress-mini ">
+                                    <div style="width:15%" class="progress-bar progress-bar-warning"></div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="clearfix">
+                                    <span class="pull-left">Bug Fixes</span>
+                                    <span class="pull-right">90%</span>
+                                </div>
+
+                                <div class="progress progress-mini progress-striped active">
+                                    <div style="width:90%" class="progress-bar progress-bar-success"></div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                See tasks with details
+                                <i class="icon-arrow-right"></i>
+                            </a>
                         </li>
                     </ul>
                 </li>
+                <li>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        Yunlong Mao <i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-menu pull-right dropdown-caret">
+                        <li><a href="#"><i class="fa fa-cog"></i> Settings</a></li>
+                        <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#"><i class="fa fa-power-off"></i> Sign Out</a></li>
+                    </ul>
+                </li>
             </ul>
-        </div>
+        </nav>
     </div>
-</div>
+</header>
