update login auth

--- a/testbox/templates/base.html
+++ b/testbox/templates/base.html
@@ -8,6 +8,7 @@
     <!-- basic styles -->
     <link rel="stylesheet" href="{{ static('css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ static('css/font-awesome.min.css') }}" />
+    <link rel="stylesheet" href="{{ static('css/zTreeStyle.css') }}" />
     <!-- page specific plugin styles -->
     {%- block stylesheet_plugin %}{% endblock -%}
     <!-- fonts -->
@@ -127,6 +128,7 @@
 <script src="{{ static('js/typeahead-bs2.min.js') }}"></script>
 <script src="{{ static('js/jquery-ui-1.10.3.custom.min.js') }}"></script>
 <script src="{{ static('js/jquery.ui.touch-punch.min.js') }}"></script>
+<script src="{{ static('js/jquery.ztree.core-3.5.js') }}"></script>
 <!--[if lte IE 8]>
 <script src="{{ static('js/excanvas.min.js') }}"></script>
 <![endif]-->
