--- a/testbox/templates/auth/login.html
+++ b/testbox/templates/auth/login.html
@@ -46,8 +46,10 @@
                                     </h4>
 
                                     <div class="space-6"></div>
-
-                                    <form method="post" action="{{ url_for('auth.login') }}">
+                                    {% if login_failed %}
+                                    <div class="alert alert-danger">Please check your coreid/password</div>
+                                    {% endif %}
+                                    <form method="post" action="{{ url_for('auth.login') }}?next={{ next }}">
                                         <fieldset>
                                             <label class="block clearfix">
 	                						    <span class="block input-icon input-icon-right">
@@ -71,7 +73,7 @@
                                                     <span class="lbl"> Remember Me</span>
                                                 </label>
 
-                                                <button type="button" class="width-35 pull-right btn btn-sm btn-primary">
+                                                <button type="submit" class="width-35 pull-right btn btn-sm btn-primary">
                                                     <i class="icon-key"></i>
                                                     Login
                                                 </button>
