--- a/testbox/templates/testcase/index.html
+++ b/testbox/templates/testcase/index.html
@@ -2,16 +2,62 @@
 
 {% block title %}Testcase{% endblock %}
 
+{%- block stylesheet %}
+    <style type="text/css">
+        .ztree.testcases {
+            overflow: auto;
+            height: 650px;
+        }
+    </style>
+{% endblock -%}
+
 {% block body_content %}
-<div class="page-content">
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="row">
-                <div class="col-xs-12">
+    <div class="page-content">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="col-xs-4 widget-container-span">
+                    <div class="widget-box" style="opacity: 1;">
+                        <div class="widget-header widget-hea1der-small header-color-orange">
+                            <h6><strong>Testcases Tree</strong></h6>
+
+                            <div class="widget-toolbar">
+                                <a data-action="settings" href="#">
+                                    <i class="icon-cog"></i>
+                                </a>
+
+                                <a data-action="reload" href="#">
+                                    <i class="icon-refresh"></i>
+                                </a>
+
+                                <a data-action="collapse" href="#">
+                                    <i class="icon-chevron-up"></i>
+                                </a>
+
+                                <a data-action="close" href="#">
+                                    <i class="icon-remove"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="widget-body">
+                            <div class="widget-main padding-4">
+                                <div class="content">
+                                    <div class="ztree testcases" id="tc_tree"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-8 ztree">
                     test
                 </div>
             </div>
         </div>
     </div>
-</div>
+{% endblock %}
+
+{% block javascript %}
+    <script>
+
+    </script>
 {% endblock %}
